--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,34 +1,37 @@
 #about_menu{
     width: 100%;
-    background-color: whitesmoke;
+    background-color: rgb(247, 247, 247);
     float: left;
     margin-top: 50px;
-    #pic{
+    #brief{
         width: 30%;
         float: left;
+        margin-top: 40px;
         padding: 35px;
-        padding-top: 7%;
-        img{
-            width: 80%
-        }
     }
-    #brief{
+    #mid{
         width: 40%;
         float: left;
-        padding: 25px;
-        #source-files{
-            margin-top: 30px;
-
-            a {
-                margin: 5px;
+        padding: 55px;
+        
+        #pic{
+            width: 80%;
+            padding: 35px;
+            padding-top: 3%;
+            img{
+                width: 90%
             }
         }
+        
     }
 
     #last_column{
         width: 30%;
         float: left;
         padding: 25px;
+                img{
+            width: 80%
+        }
         form{
             padding: 10px;
         }
