--- a/src/app/shopping/productdisplay/productdisplay.component.scss
+++ b/src/app/shopping/productdisplay/productdisplay.component.scss
@@ -1,6 +1,11 @@
 #productDisplay{
   float: left;
   margin-top: 50px;
+  #prodDetail{
+    float: left;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
   .catheader
   {
       font-size: xx-large;
