--- a/src/app/transition/transition.component.html
+++ b/src/app/transition/transition.component.html
@@ -9,10 +9,10 @@
       <h5>
         About
       </h5>
-      <h4>
-        Via Web is the portfolio of the websites I like, it is written solely with the aim of exercising my web writing skills, 
-        the link of the original website is indicated under each project.
-      </h4>
+      <h5>
+          the home page was duplicated to exercise my web writing skills, 
+          & the rest was developed to employ the frontend and backend technologies you can read about them <a routerLink="/about" ><b>here</b></a>.
+      </h5>
     </div>
   </div>
   <div id="trans_trans">
