--- a/src/app/foot/foot.component.html
+++ b/src/app/foot/foot.component.html
@@ -3,13 +3,15 @@
   <div id="foot">
     <div id="foot_table">
       <table>
-        <tr>
-          <td><a href="#" onclick="return false">collaborate with us</a></td>
-          <td><a href="#" onclick="return false">contact us</a></td>
-          <td><a href="#" onclick="return false">FAQ</a></td>
-          <td><a href="#" onclick="return false">Terms and Conditions</a></td>
-          <td><span>Via Web 2019</span></td>
-        </tr>
+        <tbody>
+          <tr>
+            <td><a routerLink="/">Home</a></td>
+            <td><a routerLink="/about">About us</a></td>
+            <td><a routerLink="/productdisplay">Products</a></td>
+            <td><a routerLink="/technologies">Community</a></td>
+            <td><span>Via Web 2019</span></td>
+          </tr>
+      </tbody>
       </table>
     </div>
   </div>
