--- a/src/app/foot/foot.component.scss
+++ b/src/app/foot/foot.component.scss
@@ -5,7 +5,8 @@
     background-color:#EFEFEF; 
     width:100%; height:175px; 
     float:left; 
-    margin-left:auto; margin-right:auto; 
+    margin-left:auto; margin-right:auto;
+    padding-top: 20px; 
     #foot_table{
         width: 80%;
         margin-left:10%; margin-right:10%; 
