--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -10,18 +10,16 @@
         <span></span>
     </div>
   </div>
-  <div id="logo">
-      <h2><a routerLink="/">VW</a></h2>
-  </div>
+  
   <div id="title">
     <h1><a routerLink="/">Via Web</a></h1>
   </div>
   <div id="navbar">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-sm float-right h-75 mt-1" id="navbarSupported">
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <button type="button" routerLink='/mycart' class="btn btn-primary">
+            <button type="button" routerLink='/mycart' class="dropdown-item">
               <b>Cart </b> <span class="badge badge-light">{{cartItemCount}}</span>
               <span class="sr-only">unread messages</span>
             </button>
@@ -42,19 +40,21 @@
       </div>
     </nav>
   </div>
-  
+  <!-- <div id="logo">
+        <h2><a routerLink="/">VW</a></h2>
+      </div> -->
 </div>
 
 <!-- ************************ the menu **************************************************** -->
 <div id=menu_visard on-escape="unCheck()" [style.display]="isChecked  ? 'block' : 'none'">
   <div id="menu_position">
     <ul id="menu_ul">
-      <li class="menu_li"><a routerLink="productdisplay">Products</a></li>
-      <li class="menu_li"><a routerLink="/duplicates">Promotions</a></li>
-      <li class="menu_li"><a routerLink="/designs">Films</a></li>
-      <li class="menu_li"><a routerLink="/technologies">Community</a></li>
-      <li class="menu_li"><a routerLink="/about">About</a></li>
-      <li id="li_contactus"><a routerLink="/contact"><p>Leave a Post</p></a></li>
+      <li class="menu_li"><a (click)="myToggleHandler()" routerLink="productdisplay">Products</a></li>
+      <li class="menu_li"><a (click)="myToggleHandler()" routerLink="/duplicates">Promotions</a></li>
+      <li class="menu_li"><a (click)="myToggleHandler()" routerLink="/designs">Films</a></li>
+      <li class="menu_li"><a (click)="myToggleHandler()" routerLink="/technologies">Community</a></li>
+      <li class="menu_li"><a (click)="myToggleHandler()" routerLink="/about">About</a></li>
+      <li id="li_contactus"><a (click)="myToggleHandler()" routerLink="/contact"><p>Leave a Post</p></a></li>
     </ul>
   </div>
 </div>
